hack/deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: searchlight-operator
  namespace: kube-system
  labels:
    app: searchlight
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: searchlight
    spec:
      containers:
      - name: operator
        image: appscode/searchlight:canary
        args:
        - run
        - --icinga-secret-name=searchlight-operator
        - --icinga-secret-namespace=kube-system
        - --v=3
        ports:
        - containerPort: 56790
          name: http
          protocol: TCP     
      - image: appscode/icinga:1.5.9-k8s
        name: icinga
        ports:
        - containerPort: 5665
          name: api
          protocol: TCP
        - containerPort: 60006
          name: web
          protocol: TCP
        livenessProbe:
          httpGet:
            scheme: HTTPS
            port: 5665
            path: /v1/status
            httpHeaders:
              - name: Authorization
                value: "Basic c3RhdHVzdXNlcjpzdGF0dXNwYXNz"
          initialDelaySeconds: 300
          periodSeconds: 120
        volumeMounts:
          - name: data-volume
            mountPath: /var/pv
          - name: script-volume
            mountPath: /var/db-script
          - name: icingaconfig
            mountPath: /srv/icinga2/secrets
      - image: appscode/postgres:9.5-v3-db
        name: ido
        args:
          - basic
          - './setup-db.sh'
        ports:
          - containerPort: 5432
            name: ido
            protocol: TCP
        volumeMounts:
          - name: data-volume
            mountPath: /var/pv
          - name: script-volume
            mountPath: /var/db-script
      volumes:
        - name: data-volume
          emptyDir: {}
        - name: script-volume
          emptyDir: {}
        - name: icingaconfig
          secret:
            secretName: searchlight-operator
---
kind: Service
apiVersion: v1
metadata:
  name: searchlight-operator
  namespace: kube-system
  labels:
    app: searchlight
spec:
  ports:
  - name: web
    port: 80
    targetPort: web
  - name: api
    port: 5665
    targetPort: api
  - name: http
    port: 56790
    targetPort: web
  selector:
    app: searchlight
