hack/deploy/with-rbac.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: searchlight-operator
  namespace: kube-system
  labels:
    app: searchlight
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: searchlight
    spec:
      serviceAccountName: searchlight-operator
      containers:
      - name: operator
        image: appscode/searchlight:3.0.0
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --v=3
        - --config-dir=/srv
        - --config-secret-name=searchlight-operator
        - --api.address=:8080
        - --web.address=:56790
        ports:
        - name: api
          containerPort: 8080
          protocol: TCP
        - name: web
          containerPort: 56790
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /srv
      - name: icinga
        image: appscode/icinga:3.0.0-k8s
        imagePullPolicy: IfNotPresent
        ports:
        - name: icinga
          containerPort: 5665
          protocol: TCP
        - name: ui
          containerPort: 60006
          protocol: TCP
        livenessProbe:
          httpGet:
            scheme: webS
            port: 5665
            path: /v1/status
            httpHeaders:
              - name: Authorization
                value: "Basic c3RhdHVzdXNlcjpzdGF0dXNwYXNz"
          initialDelaySeconds: 120
          periodSeconds: 30
        volumeMounts:
        - name: data
          mountPath: /srv
      - name: ido
        image: appscode/postgres:9.5-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - name: ido
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: searchlight-operator
  namespace: kube-system
  labels:
    app: searchlight
spec:
  ports:
  - name: ui
    port: 80
    targetPort: ui
  - name: api
    port: 8080
    targetPort: api
  - name: web
    port: 56790
    targetPort: web
  selector:
    app: searchlight
